Closed Bug 208026 Opened 21 years ago Closed 21 years ago

Fetching mail via IMAP on a cyrus server doesn't work and crashes Mozilla afterwards

Categories

(MailNews Core :: Networking: IMAP, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.4final

People

(Reporter: fabian.seitz, Assigned: Bienvenu)

References

Details

(Whiteboard: a=asa,sspitzer [fixed on trunk and branch])

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4) Gecko/20030529
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4) Gecko/20030529

Fetching mail from a cyrus IMAP server hangs. The windows hourglass doesn't
vanish and new mails are not fetched. After a very long time a message alert
says that the connection failed. Mozilla hangs when the mail windows is closed.
My other IMAP account works fine, so I guess it's a cyrus-specific problem. 

Reproducible: Always

Steps to Reproduce:
1. Open MailNews
2. 
3. 

Actual Results:  
Fetching mail hangs after opening MailNews. After closing MailNews Mozilla hangs.

Expected Results:  
Fetch the mail.

Until Mozilla 1.3.1 (maybe even 1.4a and 1.4b, but I tested these version not
very thoroughly due to other problems) this problem didn't show up.
Summary: Fetching mail via IMAP on a cyrus sercer doesn't work and crashes Mozilla afterwards → Fetching mail via IMAP on a cyrus server doesn't work and crashes Mozilla afterwards
I have to say this works for me. Could you try generating an imap protocol log
of this fetching failing? Can you connect to the server at all, e.g., does it
log on to the server?

http://www.mozilla.org/quality/mailnews/mail-troubleshoot.html#imap
Status: UNCONFIRMED → NEW
Ever confirmed: true
works.imap.org is the account that works, hangs.imap.org the server that causes
the problem.
I posted a logfile as you wished. I just opened MailNews and clicked on the inbox.
ah, thx, I see the problem - your server claims to support auth-crammd5, but it
hangs when we attempt that logon. So, until we have a pref to disable cram-md5
authentication, you're either going to have to fix it on the server-side, or
just wait. I'll try to add support for that pref soon.
I see - was this preference changed from version 1.3.1 to 1.4x ?
the ability to do cram-md5 was added between 1.3.1 and 1.4x, but the pref was
only added for pop3 (or smtp, or both), but not imap. The pref is only needed
for broken server configurations, but it turns out that there are a lot out
there :-(
thx for the answer

In a way it's still a bug - failed authentication via cram-md5 shouldn't cause a
complete crash of the application.
yes, you're right, it shouldn't hang or crash - there is a known problem that
the networking layer isn't always telling us about network connections getting
dropped, which probably accounts for the hang, and I suspect the crash as well,
if we're using a bad socket.
Attached patch proposed fixSplinter Review
this adds support for the pref to turn off secure authentication attempts. I'd
like to get bug 205571 checked in first so that there will be a UI for this
pref, and secure auth will be on by default.
we want this for the 1.4 branch.
Status: NEW → ASSIGNED
Flags: blocking1.4+
Keywords: nsbeta1
Target Milestone: --- → mozilla1.4final
Comment on attachment 124822 [details] [diff] [review]
proposed fix

r/sr/a=sspitzer

before I land on the 1.4 branch, I'll get a second driver (and adt) to approve.
Attachment #124822 - Flags: superreview+
Attachment #124822 - Flags: review+
Attachment #124822 - Flags: approval1.4+
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
a=adt.  Please land this fix on the Mozilla 1.4 branch and add fixed1.4 to the
keyword.
Fabian, with tomorrow's build, can you bring up the account settings for your
imap server that's causing the problem, click on server settings, and uncheck
the "use secure authentication" box. Then, to be safe, restart, and try again.
The problem should go away.
*** Bug 205012 has been marked as a duplicate of this bug. ***
Whiteboard: a=asa
landed on branch, a=asa,sspitzer,adt
Keywords: fixed1.4
Whiteboard: a=asa → a=asa,sspitzer
Whiteboard: a=asa,sspitzer → a=asa,sspitzer [fixed on trunk and branch]
it works :-)

fortunately the new setting was turned off after upgrading - I hope that's default

Thank you very much for the fast solution of this problem
I flipped the default back to false because of some problems with POP - np.
Fabian, when checking this bug did you use the trunk build? If so then could you
also try a branch build?
Hi,

I used this build (the first nightly build after you fixed the bug):

Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5a) Gecko/20030604

Which kind of build is this ? Where can I get the other one ?
that's a trunk build - I don't know if Mozilla has released a 1.4 final
candidate build with my fix in it or not. It looks to me like not. I'm not sure
when they're going to do another release candidate build. Probably
tonight/tomorrow morning.
Fabian, try this link to download the latest mozilla branch build, thanks:
ftp://ftp.mozilla.org/pub/mozilla/nightly/2003-06-05-08-1.4
I downloaded and installed this build.

Although the new checkbox in mail&newsgroup settings is missing, the bug doesn't
show up.
right, thx, Fabian. On the branch, we didn't put in the UI for disabling the
secure authentication; we just made it disabled by default.
Thanks everyone!
Verified Fixed.
Status: RESOLVED → VERIFIED
Keywords: fixed1.4verified1.4
QA Contact: gchan → nbaca
*** Bug 209278 has been marked as a duplicate of this bug. ***
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: