fix for bug #208026 Fetching mail via IMAP on a cyrus server doesn't work and crashes Mozilla afterwards r/sr=sspitzer, a=asa,sspitzer,adt